rename class name and add reference for productionn code in Test Project; Add test case "validBraces_Input_Was_Valid_Square_Should_Return_True" and failed

--- a/KataValidBraces.Tests/KataValidBraces.Tests.csproj
+++ b/KataValidBraces.Tests/KataValidBraces.Tests.csproj
@@ -43,11 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Kata.Test.cs" />
+    <Compile Include="Brace.Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\KataValidBraces\KataValidBraces.csproj">
+      <Project>{a6fe1181-1f12-4279-bdd7-2737f76f3bde}</Project>
+      <Name>KataValidBraces</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
